<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
		
		<TableLayout android:id="@+id/main"
			    android:orientation="vertical" android:padding="2dip"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:stretchColumns="1"
			    >
			
			<TableRow
		        style="@style/centered_row"
	            android:paddingTop="5px"
		        >
			  <TextView
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:text="@string/fragment_name_label"
			    style="@style/label"
			    />
              <EditText android:id="@+id/fragment_name"
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content"	        
		        android:hint="@string/fragment_name_initial_text"
		        android:lines="1"
	            android:singleLine="true"
	            android:maxLength="40"
	            style="@style/editable_text"
				android:nextFocusDown="@+id/select_file_button"
	            >
		        <requestFocus />
              </EditText>
			</TableRow>

			<TableRow
		        style="@style/centered_row"
	            android:paddingTop="5px"
		        >
			  <TextView
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:text="@string/fragment_file_label"
			    style="@style/label"
			    />
			  <TextView android:id="@+id/fragment_file_name" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    style="@style/text"
			    />
			</TableRow>

		    <Button android:id="@+id/select_file_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/select_file_button_title"
	            />

		    <Button android:id="@+id/play_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/play_button_title"
	            />

			<LinearLayout 
			  	android:orientation="horizontal"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:layout_span="2"
	            android:paddingTop="5px"
			    >
			
			    <Button android:id="@+id/save_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="@string/save_button_title"
		            />
		            
			    <Button android:id="@+id/cancel_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="@string/cancel_button_title"
		            />
		
	    	</LinearLayout>
		</TableLayout>
							
</ScrollView>
